--- a/index.html
+++ b/index.html
@@ -1,25 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Love Message</title>
-  <style>
-    body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background: pink;
-      font-family: Arial, sans-serif;
-      text-align: center;
-    }
-    h1 {
-      font-size: 3em;
-      color: red;
-    }
-  </style>
-</head>
 <body>
-  <h1>I love you, Sinorita! From Luley 💖</h1>
+    <h1>Welcome, my Twin</h1>
+    <p>this is my project to insult u </p>
+    <p>it is because u are the reson to lost our 154 day streak </p>
+    <p>and i don't have a motive to start again </p>
+    <p>lastly ተበዳ </p> 
 </body>
-</html>
